2007-02-06 zunda <zunda at freeshell.org>
	* tdiary.rb: reverting the local change. Sorry.

2007-02-06 zunda <zunda at freeshell.org>
	* tdiary.rb: stop checking tsukkomi once it has been made
	invisible by a filter

2007-01-31 TADA Tadashi <sho@spc.gr.jp>
	* skel/mail.rtxt*: add TSUKKOMI display status, 'shown' or 'hidden'.

2007-01-30 TADA Tadashi <sho@spc.gr.jp>
	* filter/spamakismet.rb: force hide TSUKKOMIs. Because Akismet judge
	Japanese TSUKKOMI to spam sometime.

2007-01-29 TADA Tadashi <sho@spc.gr.jp>
	* filter/spamakismet.rb: add spam filter using Akismet <http://akismet.com/>.

2007-01-26 TADA Tadashi <sho@spc.gr.jp>
	* filter/spam.rb: split RBL list by '\n' -> '[\r\n]+'.

2007-01-26 SHIBATA Hiroshi <h-sbt@nifty.com>
	* filer/spam.rb,plugin/10spamfilter.rb: fix spamfilter.max_rate float to interger.

2007-01-25 zunda <zunda at freeshell.org>
	* skel/preview.html*: removed gsub(/ /, '&nbsp;') from the view
	of plugin error, as the string is espaced more completly with h()

2007-01-26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, filter/spam.rb, plugin/spamfilter.rb: move debug method into
	Filter class. And rename options 'spamfilter.debug_*' to 'filter.debug_*'.
	And split debug mode to 3 state: DEBUG_NONE, DEBUG_SPAM and DEBUG_FULL.
	* skel/i.update.rhtml*, plugin/00default.rb: enlarge TEXTAREA size.

2007-01-22 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: add misc/lib into default search path of ruby library.

2007-01-19 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/00default.rb: fix bug in to_utf8 method ('e' -> 'w').

2007-01-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/{ja,en,zh}/00default.rb: add to_utf8 method.

2007-01-17 SHIBATA Hiroshi <h-sbt@nifty.com>
	* plugin/00default.rb: add name attribute for comment-form.

2007-01-17 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: support TrackBack spec 1.2.
	* tdiary/lang/*.rb: to_native optional support source charset.

2007-01-09 zunda <zunda at freeshell.org>