@@ -1,3 +1,7 @@
+2007-02-06 TADA Tadashi <sho@spc.gr.jp>
+	* tdiary.rb: @options['proxy'] set to ENV['HTTP_PROXY'] in Plugin.
+	* plugin/05referer.rb: DefaultIO detective code change 'class' to 'String'.
+
 2007-02-06 zunda <zunda at freeshell.org>
 	* tdiary.rb: reverting the local change. Sorry.
 
